<resources>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">jFRczHoA7jym7X9DYOG6IMQab</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">X3hYoUjklg5c3QpLi6MPx487nmGSGjlMm77kTAWMeRJPt9Xmlu</string>
    <string name="app_name">InWeCrypto</string>
    <string name="hangqing">行情</string>
    <string name="zixun">资讯</string>
    <string name="zichan">资产</string>
    <string name="dinzhi">定制</string>
    <string name="reqianbao">热钱包</string>
    <string name="lengqianbao">冷钱包</string>
    <string name="zhuce">注册</string>
    <string name="zongzichan">总资产</string>
    <string name="yuedenghao">≈</string>
    <string name="yuedenghaopricecn">≈¥</string>
    <string name="yuedenghaopriceus">≈$</string>
    <string name="wuzichan">￥0.00</string>
    <string name="eth">ETH</string>
    <string name="btc">BTC</string>
    <string name="qianbaodizhi">钱包地址</string>
    <string name="zhuanzhang">转账</string>
    <string name="shoukuan">收款</string>
    <string name="jiaoyijilu">交易纪录</string>
    <string name="quanbuzichan">全部资产</string>
    <string name="qianbaoxiangqin">钱包详情</string>
    <string name="qingshurunicheng">请输入昵称</string>
    <string name="qingshuruqianbaodizhi">请输入钱包地址</string>
    <string name="tianjiachenggong">添加成功</string>
    <string name="tianjialianxiren">添加联系人</string>
    <string name="chakanlianxiren">查看联系人</string>
    <string name="bianjilianxiren">编辑联系人</string>
    <string name="load_error">加载失败!请检查网络后重试!</string>
    <string name="fix_error">修改失败!请检查网络后重试!</string>
    <string name="zanwushuju">暂无数据</string>
    <string name="denglushibai">登录失败</string>
    <string name="hangqingxiangqing">行情详情</string>
    <string name="tianjiaqianbao">添加钱包</string>
    <string name="tianjiadaibi">添加代币</string>
    <string name="shoukuanqueren">收款确认</string>
    <string name="shoukuanxiangqing">收款详情</string>
    <string name="zhuanzhuangqueren">转账确认</string>
    <string name="zhuanzhangxiangqing">转账详情</string>
    <string name="saoyisao_space">扫一扫\u0020\u0020\u0020\u0020</string>
    <string name="weibeifen">未备份</string>
    <string name="guancha">观察</string>
    <string name="liangdiankaipan">零点开盘</string>
    <string name="zuigao">最高</string>
    <string name="zuidi">最低</string>
    <string name="chengjiaoliang">成交量</string>
    <string name="xianshizichan">显示资产</string>
    <string name="jiageshangxian">价格上限</string>
    <string name="jiagexiaxian">价格下限</string>
    <string name="yanzheng">验 证</string>
    <string name="baocun_space">保 存</string>
    <string name="tianjiaxinqianbao">添加新钱包</string>
    <string name="zhongzibeifentishi">请及时进入钱包并备份种子保障钱包的安全，种子一经备份则会在APP上消失，需要牢记，否则钱包无法找回</string>
    <string name="jinruqianbaokaishibeifen">进入钱包开始备份</string>
    <string name="keystorebeifentishi">请及时进入钱包并备份助记词以及Key Store保障钱包的安全，助记词一经备份则会在APP上消失，需要牢记，否则钱包无法找回</string>
    <string name="zhongzishurutishi">请输入种子，按空格分隔</string>
    <string name="quanbudaibi">全部代币</string>
    <string name="zhuanzhangjine">转账金额</string>
    <string name="beizhu">备注</string>
    <string name="zhuanzhangqianbaodizhi">转账钱包地址</string>
    <string name="shoukuanjine">收款金额</string>
    <string name="shoukuanfangqianbaodizhi">收款方钱包地址</string>
    <string name="zhuanzhuangfangqianbaodizhi">转账方钱包地址</string>
    <string name="queding">确 定</string>
    <string name="zhuanzhan">转 账</string>
    <string name="touxiang">头像</string>
    <string name="nicheng">昵称</string>
    <string name="xingbie">性别</string>
    <string name="gerenshezhi">个人设置</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="gerentouxiang">个人头像</string>
    <string name="jingqingqidai">敬请期待</string>
    <string name="xiangce">相册</string>
    <string name="zhifuchenggong">支付成功</string>
    <string name="weifaxianerweima">未发现二维码</string>
    <string name="gao">高</string>
    <string name="di">低</string>
    <string name="liang">量</string>
    <string name="tianjiahangqing">添加行情</string>
    <string name="bianjihangqing">编辑行情</string>
    <string name="tixing">提醒</string>
    <string name="tuodong">拖动</string>
    <string name="daoruqianbao">导入钱包</string>
    <string name="qianbaomingcheng">钱包名称</string>
    <string name="shedingmima">设定密码</string>
    <string name="chongfushurumima">重复输入密码</string>
    <string name="mimayaoqiu">密码需包含不少于8位数的大小写字母以及数字</string>
    <string name="quedingtianjia">确定添加</string>
    <string name="qingtianxiemingcheng">请填写名称</string>
    <string name="qingtianxiemima">请填写密码</string>
    <string name="liangcimiamshurubuyiyang">两次密码输入不一样</string>
    <string name="keystore_hit">复制粘贴keystore文件内容，也可通过右上角扫描二维码，将信息录入</string>
    <string name="zhujici_hit">请输入助记词，按空格分隔</string>
    <string name="siyao_hit">请输入明文私钥</string>
    <string name="guancha_hit">观察钱包只需要导入钱包地址即可，可进行日常的账户管理以及交易。大额资产建议使用冷钱包或其他途径管理，避免泄露被盗</string>
    <string name="zhongzi_hit">请输入种子，按空格分隔</string>
    <string name="keystore">Keystore</string>
    <string name="zhujici">助记词</string>
    <string name="siyao">私钥</string>
    <string name="zhongzi">种子</string>
    <string name="kaishidaoru">开始导入</string>
    <string name="weidu">未读</string>
    <string name="yidu">已读</string>
    <string name="xinxi">信息</string>
    <string name="quxiao">取消</string>
    <string name="dialog_queding">确定</string>
    <string name="qingshurumiam">请输入密码</string>
    <string name="tishi">提示</string>
    <string name="shanchu">删除</string>
    <string name="dingzhi">置顶</string>
    <string name="dingzhishibai">置顶失败</string>
    <string name="dingzhichenggong">置顶成功</string>
    <string name="jiazaishibai">加载失败</string>
    <string name="wancheng">完成</string>
    <string name="tianjiashibai">添加失败</string>
    <string name="qingshurumima">请输入密码</string>
    <string name="mimacuowuqingchongshi">密码错误请重试</string>
    <string name="shanchuchenggong">删除成功</string>
    <string name="shanchushibai">删除失败</string>
    <string name="fuzhichenggong">复制成功，可以发给朋友们了</string>
    <string name="lingfushouxufei">手续费：</string>
    <string name="jiaoyidanhao">交易单号：</string>
    <string name="wallet">wallet</string>
    <string name="wojihaole">我记好了</string>
    <string name="xiugainicheng">修改昵称</string>
    <string name="xiugaixingbie">修改性别</string>
    <string name="nichengbunengweikong">昵称不能为空</string>
    <string name="xiugaichenggong">修改成功</string>
    <string name="xiugaishibai">修改失败</string>
    <string name="baocun">保存</string>
    <string name="shurujigebunengweikong">输入价格不能为空</string>
    <string name="tianjichenggong">添加成功</string>
    <string name="tupianshangchuanshibai">图片上传失败</string>
    <string name="shezhiyidu">设置为已读</string>
    <string name="shezhishibai">设置失败</string>
    <string name="gaidizhiyifuzhi">该地址已复制</string>
    <string name="quanxianqingqiuchenggong">权限请求成功！</string>
    <string name="xiangjiquanxiantishi">为了您能够正常使用扫一扫功能，超级码需要获得相机权限</string>
    <string name="liulanqi">浏览器</string>
    <string name="tongxunlu">通讯录</string>
    <string name="huobidanwei">货币单位</string>
    <string name="wangluoqiehuan">网络切换</string>
    <string name="guanyuwomen">关于我们</string>
    <string name="qingjianchawangluoshifoulianjie">请检查网络是否连接！</string>
    <string name="fuwuxieyi_yingsixieyi_underline">登录钱包即表示同意<![CDATA[<u>《服务协议》、《隐私协议》</u>]]></string>
    <string name="fuwuxieyiheyinsixieyi">服务协议和隐私条款</string>
    <string name="idhuoqushibai">ID获取失败，请检查网络后重试</string>
    <string name="wan">万</string>
    <string name="yi">亿</string>
    <string name="bianji">编辑</string>
    <string name="qingtianxietixingjiage">请填写提醒价格！</string>
    <string name="zanshiwufaqiehuanceshiwang">暂时无法切换测试网</string>
    <string name="qingshuruzhengquedeqianbaodizhi">请输入正确的钱包地址</string>
    <string name="xiangcequanxiantishi">为了您能够修改头像，需要获取查看相册权限</string>
    <string name="nichengbunengchaoguo12gezifu">昵称不能超过12个字符</string>
    <string name="fuwuxieyi">服务协议</string>
    <string name="yinsitiaokuan">隐私条款</string>
    <string name="kaiyuanxieyi">开源协议</string>
    <string name="kaifatuandui">开发团队</string>
    <string name="jiaoyishibai">交易失败</string>
    <string name="zhunbeidabao">准备打包</string>
    <string name="yijingqueren">已经确认</string>
    <string name="inner_error">服务器内部错误</string>
    <string name="nfc_hit">为了您能够创建钱包，需要获得NFC权限</string>
    <string name="zhuanzhang_error">转账失败请重试</string>
    <string name="zhengzaichaungjianlengqianbao">正在创建冷钱包</string>
    <string name="nfc_card_error">卡片类型错误</string>
    <string name="nfc_write_error">数据写入失败！请重试</string>
    <string name="nfc_read_error">读卡错误！请重试！</string>
    <string name="wallet_creat_error">钱包创建失败！请检查网络后重试</string>
    <string name="qingxiantianxiemima">请先填写密码</string>
    <string name="mimachangdu">密码长度不得少于8位</string>
    <string name="wallet_inner_creat_error">钱包创建失败</string>
    <string name="zanshiwufatianjiabtc">暂时无法添加BTC</string>
    <string name="zanshiwufatianjianeo">暂时无法添加NEO</string>
    <string name="no_nfc_hit">您的手机不支持nfc!请使用热钱包创建！</string>
    <string name="wodezichan">我的资产</string>
    <string name="wallet_data_error">钱包数据错误，请退出重试</string>
    <string name="beifenci_error">备份助记词失败！请稍后重试</string>
    <string name="keystory_error">备份keystory失败！请稍后重试</string>
    <string name="password_error">密码输入错误！请重试</string>
    <string name="zhuanweierqianbao">转为热钱包</string>
    <string name="tianxieneirongbuenngweikong">填写内容不能为空</string>
    <string name="tianjiakeystore">添加Keystore</string>
    <string name="tianjiazhujici">添加助记词</string>
    <string name="tianjiamingwensiyao">添加明文私钥</string>
    <string name="tianjiaguanchaqianbao">添加观察钱包</string>
    <string name="tianjiazhongzi">添加种子</string>
    <string name="wallet_has_add_error">该钱包已添加，不能重复添加</string>
    <string name="qingshuruzhengquedizhi">请输入正确地址</string>
    <string name="jianchamima">请检查钱包密码是否输入正确</string>
    <string name="jianchazhujici">请检查助记词是否输入正确</string>
    <string name="jianchasiyao">请检查私钥是否输入正确</string>
    <string name="qianbaodizhifuzhi">钱包地址已复制到剪贴板</string>
    <string name="chaxunjiaoyi">查询交易</string>
    <string name="dangqianyue">当前余额</string>
    <string name="yuehuoqushibai">余额获取失败</string>
    <string name="qianbaoyuebuzu">钱包余额不足！</string>
    <string name="yuebuzu">余额不足！</string>
    <string name="qingtianxiezhuanzhangqianbaodizhi">请填写转账钱包地址</string>
    <string name="qingtianxiezhuanzhangjine">请填写转账金额</string>
    <string name="qingtianxiezhengquedejine">请填写正确的金额</string>
    <string name="zhuanzhangshibaiqingchongshi">转账失败请重试</string>
    <string name="zhuanzhangchenggong">转账成功</string>
    <string name="fuwuqineibucuowu">服务器内部错误</string>
    <string name="qianbaoshujucuowu_qingtuichuchongshi">钱包数据错误，请退出重试</string>
    <string name="zhuanzhangqueren">转账确认</string>
    <string name="beifenzhujici">备份助记词</string>
    <string name="qingjiangquanbudezhujicixuanzewanbi">请将全部的助记词选择完毕</string>
    <string name="qianbaochakan">钱包查看</string>
    <string name="keyongshuliang">可用数量</string>
    <string name="chakan">查看</string>
    <string name="jiaoyishouxufei">交易手续费：</string>
    <string name="tijiao">提 交</string>
    <string name="qianbaoliebiao">钱包列表</string>
    <string name="zhinengheyuedizhi_">智能合约地址:</string>
    <string name="neozhuanzhangshuliang">NEO转账数量：</string>
    <string name="neokeyongshuliang">(NEO 可用数量：)</string>
    <string name="_10gasfree">(10Gas以下免收手续费)</string>
    <string name="gaskeyongshuliang">(Gas 可用数量：)</string>
    <string name="qita">其它</string>
    <string name="ninzanshihaimeiyouqianbao">您暂时还没有该类型的钱包</string>
    <string name="tianjiadaoruqianbao">添加/导入钱包</string>
    <string name="kaishibeifenzhujici">开始备份助记词</string>
    <string name="zanbubeifenzhijiejinruqianbao"><u>暂不备份，直接进入钱包</u></string>
    <string name="womenxiwangqintingninbaoguideyijianyufankui">我们希望倾听您宝贵的意见与反馈</string>
    <string name="gongnengjianyi">功能建议</string>
    <string name="neirongjianyi">内容建议</string>
    <string name="lianxifangshi">联系方式</string>
    <string name="lianxifangshitip">可填写您的手机号码/QQ/邮箱等</string>
    <string name="hongbaoxieyi">请仔细阅读<u>《InWeCrypto红包使用协议》</u>全部条款，并确认你已完全了解本协议之规定。</string>
</resources>