<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff">

    <TextView
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:gravity="center"
        android:text="@string/tianjiahangqing"
        android:textSize="14sp"
        android:textColor="@color/c_333333"/>

    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:gravity="center"
        android:text="@string/bianjihangqing"
        android:textSize="14sp"
        android:textColor="@color/c_333333"/>

    <TextView
        android:id="@+id/tixing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:gravity="center"
        android:text="@string/tixing"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="@color/c_333333"/>

</LinearLayout>