<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/c_ffffff">

    <include layout="@layout/base_title_bar"/>

    <ImageView
        android:id="@+id/img"
        android:layout_width="144dp"
        android:layout_height="122dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tianjiachenggong"
        android:textSize="18dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/c_008c55"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keystorebeifentishi"
        android:textSize="14dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:textColor="#666666"
        android:layout_gravity="center_horizontal"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
ß
    <TextView
        android:id="@+id/tv_beifen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/c_ffffff"
        android:textSize="14sp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:background="@drawable/new_orgen_bg"
        android:text="@string/kaishibeifenzhujici"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/gotoWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#666666"
        android:padding="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/zanbubeifenzhijiejinruqianbao"
        android:textSize="14sp"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

</LinearLayout>
