<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/base_title_bar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="28dp"
        android:text="@string/zhinengheyuedizhi_"
        android:textColor="@color/c_000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:background="@color/c_ffffff"
        android:cursorVisible="true"
        android:gravity="center_vertical"
        android:inputType="text"
        android:textColorHint="@color/c_999999"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:textColor="@color/c_333333"
        android:textCursorDrawable='@null'
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:background="@color/c_ececec"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="28dp"
        android:text="@string/neozhuanzhangshuliang"
        android:textColor="@color/c_000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:background="@color/c_ffffff"
        android:cursorVisible="true"
        android:gravity="center_vertical"
        android:inputType="text"
        android:textColorHint="@color/c_999999"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:textColor="@color/c_333333"
        android:textCursorDrawable='@null'
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:background="@color/c_ececec"/>

    <TextView
        android:id="@+id/neo_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="28dp"
        android:text="@string/neokeyongshuliang"
        android:textColor="@color/c_A6A4A4"
        android:textSize="11sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/c_000000"
            android:text="@string/jiaoyishouxufei"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10gasfree"
            android:textColor="@color/c_A6A4A4"
            android:textSize="11sp" />

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/new_orgen_bg"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/tijiao"
        android:textColor="@color/c_ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/gas_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:text="@string/gaskeyongshuliang"
        android:textColor="@color/c_A6A4A4"
        android:textSize="11sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />

</LinearLayout>