<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/c_ffffff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="8dp"
        android:src="@mipmap/closexxhdpi"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qianbaochakan"
        android:textColor="@color/c_333333"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qianbaoliebiao"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="2dp"
            android:textSize="10sp"
            android:textColor="#C1BEBE"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyongshuliang"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="right"
            android:textSize="10sp"
            android:textColor="#C1BEBE"/>
    </FrameLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/addFl"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/c_ffffff">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/ninzanshihaimeiyouqianbao"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#A5A5A5"/>

            <net.qiujuer.genius.ui.widget.Button
                android:id="@+id/addWallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/login_bg"
                android:text="@string/tianjiadaoruqianbao"
                android:textSize="14sp"
                android:textColor="@color/c_ffffff"
                app:gTouchCornerRadius="12dp"
                app:gTouchDurationRate="0.7"
                app:gTouchEffect="ripple" />
        </LinearLayout>

    </FrameLayout>


</LinearLayout>