<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff">

    <include layout="@layout/base_title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="17dp"
        android:paddingBottom="13dp"
        android:background="@color/c_efefef">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/c_333333"
            android:textSize="14sp"
            android:text="@string/xianshizichan"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/c_333333"
            android:textSize="14sp"
            android:text="@string/jiageshangxian"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/c_333333"
            android:gravity="right"
            android:textSize="14sp"
            android:text="@string/jiagexiaxian"/>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
            android:id="@+id/market_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/c_ffffff"/>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>